--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="nav-link link-nav" aria-current="page" href="./profile.html">User</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link-nav" aria-current="page" href="#">Logout</a>
+                <a class="nav-link link-nav" aria-current="page" href="#logout">Logout</a>
               </li>
             </ul>
           </div>
@@ -60,7 +60,8 @@
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(55, 55, 55, 0.05);">
               © 2024, Server support:
-              <a class="link" href="https://rezweb.my.id/">rezweb.my.id</a>
+              <a class="link" href="https://rezweb.my.id/">rezweb.my.id,</a>
+              <small> testing project dev to staging</small>
             </div>
             <!-- Copyright -->
           </footer>
