--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
               © 2024, Server support:
               <a class="link" href="https://rezweb.my.id/">rezweb.my.id,</a>
               <small> testing project dev to staging</small>
+              <br>
+              <small>Aplikasi ini sedang tahap percobaan (design system)</small>
             </div>
             <!-- Copyright -->
           </footer>
