--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <a class="link" href="https://rezweb.my.id/">rezweb.my.id,</a>
               <small> testing project dev to staging</small>
               <br>
-              <small>Aplikasi ini sedang tahap percobaan (design system)</small>
+              <small>Aplikasi ini sedang tahap percobaan (prototype design system)</small>
             </div>
             <!-- Copyright -->
           </footer>
