--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="col-md-8 pt-3">
                 <div class="card">
-                    <div class="card-header bg-success"><h5 class="text-light">Isi Form Survey</h5></div>
+                    <div class="card-header bg-success"><h5 class="text-light">Anda sudah mengisi form survei</h5></div>
                     <div class="card-body">
                         <p>Anda Telah mengisi form survey, Form survey ini hanya bisa di isi 1 (satu) kali saja. Terima Kasih😊</p>
                         <a href="" class="btn btn-success">Lihat Jawaban Survey Anda</a>
