--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="card-header bg-primary"><h5 class="text-light">Isi Form Survey</h5></div>
                     <div class="card-body">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dignissimos ipsam voluptatem totam delectus ut iste impedit aut! Rerum, cupiditate? Autem dolor rerum provident excepturi!</p>
-                        <a href="" class="btn btn-primary">Isi Survey</a>
+                        <a href="#" class="btn btn-primary">Isi Survey</a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <div class="card-header bg-success"><h5 class="text-light">Anda sudah mengisi form survei</h5></div>
                     <div class="card-body">
                         <p>Anda Telah mengisi form survey, Form survey ini hanya bisa di isi 1 (satu) kali saja. Terima Kasih😊</p>
-                        <a href="" class="btn btn-success">Lihat Jawaban Survey Anda</a>
+                        <a href="#" class="btn btn-success">Lihat Jawaban Survey Anda</a>
                     </div>
                 </div>
             </div>
