update halaman profile

--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
             <div class="col-md-8">
                 <div class="card bg-outline-info">
                     <div class="card-header bg-primary">
-                        <h5 class="text-light">My Profile - user, Username : usr1</h5>
+                        <h5 class="text-light">Haii - user, Username : usr1</h5>
                     </div>
                     <div class="card-body">
                         <form action="#" method="post">
