add page survey

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="card-header bg-primary"><h5 class="text-light">Isi Form Survey</h5></div>
                     <div class="card-body">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dignissimos ipsam voluptatem totam delectus ut iste impedit aut! Rerum, cupiditate? Autem dolor rerum provident excepturi!</p>
-                        <a href="#isi" class="btn btn-primary">Isi Survey</a>
+                        <a href="./survey.html" class="btn btn-primary">Isi Survey</a>
                     </div>
                 </div>
             </div>
