fix responsive survey page

--- a/survey.html
+++ b/survey.html
@@ -64,9 +64,9 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <p class="px-2">1. Berapa nilai kualitas untuk layanan kesehatan :</p>
+                                        <p class="px-lg-2">1. Berapa nilai kualitas untuk layanan kesehatan :</p>
                                     </div>
-                                    <div class="col-6 pt-1">
+                                    <div class="col-md-6 pt-lg-1">
                                         <div class="form-check form-check-inline">
                                             <input class="form-check-input" type="radio" name="l_kesehatan" id="lk"
                                                 value="1" required>
@@ -95,9 +95,9 @@
                                     </div>
                                     <hr>
                                     <div class="col-md-6">
-                                        <p class="px-2">2. Berapa nilai kualitas untuk layanan pendidikan :</p>
+                                        <p class="px-lg-2">2. Berapa nilai kualitas untuk layanan pendidikan :</p>
                                     </div>
-                                    <div class="col-6 pt-1">
+                                    <div class="col-md-6 pt-lg-1">
                                         <div class="form-check form-check-inline">
                                             <input class="form-check-input" type="radio" name="l_pendidikan" id="lp"
                                                 value="1" required>
