update footer info

--- a/survey.html
+++ b/survey.html
@@ -138,7 +138,7 @@
     <footer class=" text-center text-lg-start ">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(55, 55, 55, 0.05);">
-            © 2024, code:
+            © 2024, hosted by:
             <a class="link" href="https://rezweb.my.id/">rezweb.my.id,</a>
             <br>
             <small>Aplikasi ini sedang tahap percobaan (prototype design system)</small>
